more work on gauntlet

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -183,19 +183,28 @@
 
   <div id="content">
 
-    <!-- Hero -->
-    <section class="svh-100 p-0 position-relative bg-beige overflow-hidden">
-      <div class="fullscreen background-fixed background-center o-60"
+    <!-- Image Hero -->
+    <section class=" svh-100 p-0 position-relative bg-beige overflow-hidden">
+      <div class="fullscreen background-fixed background-center o-40"
         style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 2;">
       </div>
       <div class="fullscreen background-cover background-center o-20 grayscale"
         style="background-image: url('https://images.unsplash.com/photo-1570671973922-7c208a0780c3?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); z-index: 0;">
       </div>
+      <video class="hidden d-block fullscreen o-90"
+        style="object-fit: cover; min-width: 100%; min-height: 100%;"
+        playsinline loop autoplay muted>
+        <source
+          src="https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/2024_gauntlet_hero_video.mp4"
+          type="video/mp4">
+        </source>
+      </video>
       <div
         class="fullscreen px-3 px-md-5 d-flex justify-content-center align-items-center"
         style="z-index: 2;">
         <div class="page-constrained text-center mt-8 mt-md-0">
-          <h1 class="display-1">The <span class="text-blue">Best Week of the
+          <h1 class="display-1">The <span class="text-blue">Best Week of
+              the
               Summer</span> Awaits
           </h1>
           <p class="h4 text-fuscia mb-5">June 24-28 &nbsp;&middot;&nbsp;
@@ -207,7 +216,7 @@
             id="wistia-uaxqzj6n5z-1">
             <div id="wistia_29.thumb_container" class="wistia_click_to_play">
               <a href="#" class="btn btn-lg btn-primary drop-shadow">Play
-                Videoooo <i class="fa-solid fa-play ml-1"></i></a>
+                Videoooo <i class="fa-solid fa-play ml-2"></i></a>
             </div>
           </span>
           <script src="https://fast.wistia.com/embed/medias/uaxqzj6n5z.jsonp"
@@ -227,7 +236,7 @@
 
 
 
-    <section id="about" class="position-relative bg-black text-beige">
+    <section id="about2" class="hidden position-relative bg-black text-beige">
       <div class="fullscreen background-fixed background-center o-40"
         style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
       </div>
@@ -375,75 +384,196 @@
       </div>
     </section>
 
-
-
-    <section id="go"
-      class="px-3 px-sm-5 px-md-7 px-lg-8 position-relative bg-primary text-beige">
-      <div class="fullscreen background-fixed background-center o-50"
+    <section id="about" class="position-relative bg-black text-beige">
+      <div class="fullscreen background-fixed background-center o-40"
         style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
       </div>
-      <div class="page-constrained mx-auto">
-        <div
-          class="d-grid grid-cols-1 grid-cols-lg-9 gap-y-5 gap-x-8 text-center text-lg-left bring-forward align-items-center">
-          <div class="col-span-lg-6">
-            <h2 class="display-3">Ready to go to Gauntlet? <span
-                class="text-slate">Grab your spot today!</span>
-            </h2>
-            <p>Registrations
-              close April 14, 2024.
-            </p>
-            <div
-              class="d-flex flex-column flex-lg-row gap-3 align-items-center mb-5">
-              <select name="campus" id=""
-                class="border-0 btn btn-default bg-white px-3 pr-4 text-transform-none tracking-tight text-left outline-none"
-                data-aos="fade-up">
-                <option value="">Choose Your Campus</option>
-                <option value="akn">Aiken</option>
-                <option value="and">Anderson</option>
-              </select>
-              <p class="mb-0"><a href="#" class="btn btn-secondary">Register
-                  Now</a></p>
-            </div>
-          </div>
-          <div class="col-span-lg-3">
-            <div class="text-constrained mx-auto">
-              <div class="d-grid grid-cols-1 gap-4 gap-lg-6">
-                <div data-aos="fade-up">
-                  <h3 class="h4 font-black mb-3">Early Bird Pricing</h3>
-                  <p class="display-1 mb-2 text-slate">$429</p>
-                  <p class="mb-0">Until March 6</p>
-                </div>
-                <div data-aos="fade-up">
-                  <h3 class="h4 font-black mb-3">Regular Pricing</h3>
-                  <p class="display-1 mb-2 text-slate">$450</p>
-                  <p class="mb-0">Begins March 7</p>
-                </div>
+      <div class="page-constrained mx-auto text-center">
+        <h2 class="display-1">A <span class="text-secondary">Summer Camp
+            Experience</span> Like No
+          Other.</h2>
+        <div class="text-constrained mx-auto mb-6 mb-md-8">
+          <p>Rising seventh
+            graders through graduated seniors will gather from across the
+            state
+            of
+            South Carolina for an incredible week of fun, games, friendship,
+            powerful worship, and practical Bible teaching. Join students from
+            every NewSpring campus as we learn how to grow in friendship with
+            God
+            together.</p>
+          <p class="hidden-xs hidden-sm hidden-md mb-0 bring-forward"><a
+              href="#go" class="btn btn-primary">Get Your
+              Ticket</a></p>
+        </div>
+        <div class="page-constrained mx-auto bring-forward">
 
+
+          <div class="d-grid grid-cols-2 grid-cols-md-4 gap-4">
+            <div class="d-grid gap-4">
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-green">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-1-pink.svg" alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-yellow">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-2-blue.svg" alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-blue">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-3-amber.svg" alt="">
+              </div>
+            </div>
+            <div class="d-grid gap-4">
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-purple">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/u-orange.svg" alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-fuscia">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/belong-blue.svg"
+                  alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-red">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/here-yellow.svg"
+                  alt="">
+              </div>
+            </div>
+            <div class="d-grid gap-4">
+              <div
+                class="d-flex justify-content-center align-items-center overflow-hidden bg-blue background-center background-cover"
+                style="background-image: url('https://images.unsplash.com/photo-1517256673644-36ad11246d21?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-fuscia">
+                <img class="h-auto max-w-full"
+                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"
+                  alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-lime">
+                <img class="h-auto max-w-full"
+                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg"
+                  alt="">
+              </div>
+            </div>
+            <div class="d-grid gap-4">
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-orange">
+                <img class="h-auto max-w-full"
+                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg"
+                  alt="">
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-pink background-center background-cover"
+                style="background-image: url('https://images.unsplash.com/photo-1484712401471-05c7215830eb?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+
+              </div>
+              <div
+                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-red">
+                <img class="h-auto max-w-full"
+                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg"
+                  alt="">
               </div>
             </div>
           </div>
+
         </div>
+
       </div>
     </section>
 
-    <section id="help" class="bg-slate text-white text-center">
-      <div class="page-constrained mx-auto">
-        <h2 class="h1 font-black">We're Here to Help</h2>
+    <section id="go" class="bg-primary text-beige position-relative">
+      <div class="fullscreen background-fixed background-center o-50"
+        style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
       </div>
-      <div class="text-constrained mx-auto">
-        <p>Whatever the barrier, we’d love to talk about
-          it and see if we can help. To apply for financial assistance,
-          please <a href="#" class="text-primary">fill out this
-            form</a>.</p>
-        <p class="mb-0">If your student has a disability, or needs
-          any additional support, we’d love to try to accommodate them.
-          Let us know about your student’s needs on the registration form,
-          and we’ll work with you to give your student the best week ever.
-          For more information, you can email
-          <a href="#" class="text-primary">gauntlet@newspring.cc</a>.
-        </p>
+      <div class="text-constrained mx-auto text-center mb-8 bring-forward">
+        <h2 class="display-3">Ready to go to Gauntlet? <span
+            class="text-slate">Grab your spot today!</span>
+        </h2>
+        <div
+          class="d-flex flex-column flex-lg-row gap-3 justify-content-center align-items-center mb-5">
+          <select name="campus" id=""
+            class="d-inline-block border-0 bg-white py-3 px-5 pr-7 outline-none rounded-full text-gray-darker"
+            style="-webkit-appearance: none;
+          " data-aos="fade-up">
+            <option value="">Choose Your Campus</option>
+            <option value="akn">Aiken</option>
+            <option value="and">Anderson</option>
+          </select>
+          <p class="mb-0"><a href="#"
+              class="btn btn-secondary py-3 px-5">Register
+              Now</a></p>
+        </div>
+      </div>
+
+      <div class="page-constrained mx-auto bring-forward">
+        <div
+          class="d-grid grid-cols-2 grid-cols-md-2 grid-cols-lg-3 gap-y-2 gap-x-6 gap-lg-8 mb-7">
+
+          <div class="col-span-2 col-span-md-2 col-span-lg-1"
+            data-aos="fade-up">
+            <h3 class="h2 font-black text-slate mb-0">
+              Early-Bird<br>Pricing</h3>
+            <p class="italic mb-3">Until March 6</p>
+          </div>
+
+          <div data-aos="fade-up">
+            <p class="h5 font-black text-uppercase mb-2">Single
+              Student
+            </p>
+
+            <h4 class="display-1 text-yellow">$429</h4>
+          </div>
+          <div data-aos="fade-up">
+            <p class="h5 font-black text-uppercase mb-2">
+              Multi-Student Families
+            </p>
+            <h4 class="display-1 text-yellow position-relative">$379<span
+                style="position: absolute; top: 2px; font-size: 70%;">*</span>
+            </h4>
+          </div>
+
+          <div class="col-span-2 col-span-md-2 col-span-lg-1"
+            data-aos="fade-up">
+            <h3 class="h2 font-black text-slate mb-0">
+              Regular<br>Pricing</h3>
+            <p class="italic mb-3">Starting March 7</p>
+          </div>
+
+          <div data-aos="fade-up">
+            <p class="h5 font-black text-uppercase mb-2">Single
+              Student
+            </p>
+
+            <h4 class="display-1 text-yellow">$449</h4>
+          </div>
+          <div data-aos="fade-up">
+            <p class="h5 font-black text-uppercase mb-2">
+              Multi-Student Families
+            </p>
+            <h4 class="display-1 text-yellow position-relative">$399<span
+                style="position: absolute; top: 2px; font-size: 70%;">*</span>
+            </h4>
+          </div>
+        </div>
+        <p class="px-5 px-sm-0 mb-0 text-center">*Discount will be
+          automatically
+          applied
+          upon
+          registration. Not applicable to financial assistance
+          recipients.</p>
       </div>
     </section>
+
+
 
     <section id="give" class="position-relative bg-beige">
       <div class="fullscreen background-fixed background-center o-100"
@@ -465,7 +595,8 @@
             provide them a space to encounter God in a unique way this summer.
           </p>
           <p class="bring-forward mb-0"><a href="#"
-              class="btn btn-secondary">Give Now</a></p>
+              class="btn btn-secondary">Give
+              Now</a></p>
         </span>
       </div>
     </section>
@@ -620,23 +751,28 @@
       <div class="fullscreen background-fixed background-center o-90"
         style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
       </div>
-      <div class="d-grid grid-cols-1 grid-cols-lg-9 gap-x-8 bring-forward">
-        <div class="col-span-lg-5">
-          <h2 class="display-2">Pray for Gauntlet</h2>
-          <p>Prayer is one of our most powerful tools as we prepare for and send
-            students to Gauntlet. Would you partner with us in praying for
-            students, leaders, and volunteers this year? We know that God wants
-            to meet with each and every student at Gauntlet, and we can’t wait
-            to ask Him to do what only He can do in their lives.</p>
-          <p>In the days ahead, we’ll post a sign-up link to 24/7 prayer to
-            cover the entire week of Gauntlet. We would love for you to join us
-            in praying hour by hour during our summer camp!</p>
-          <p class="mb-0"><a href="#" class="btn btn-primary">Sign Up
-              to Pray</a></p>
+      <div class="d-grid grid-cols-1 grid-cols-xl-9 gap-8 bring-forward">
+        <div class="col-span-lg-5 text-center text-xl-left">
+          <div class="text-constrained mx-auto">
+            <h2 class="display-2">Pray for Gauntlet</h2>
+            <p>Prayer is one of our most powerful tools as we prepare for and
+              send
+              students to Gauntlet. Would you partner with us in praying for
+              students, leaders, and volunteers this year? We know that God
+              wants
+              to meet with each and every student at Gauntlet, and we can’t wait
+              to ask Him to do what only He can do in their lives.</p>
+            <p>In the days ahead, we’ll post a sign-up link to 24/7 prayer to
+              cover the entire week of Gauntlet. We would love for you to join
+              us
+              in praying hour by hour during our summer camp!</p>
+            <p class="mb-0"><a href="#" class="btn btn-primary">Sign Up
+                to Pray</a></p>
+          </div>
         </div>
         <div class="col-span-lg-4">
-          <div class="d-grid grid-cols-1 gap-y-4">
-            <div>
+          <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-1 gap-7">
+            <div data-aos="fade-up">
               <h3 class="font-black">Salvation</h3>
               <p>Abba Father, may every student at the Gauntlet know and receive
                 Jesus Christ as their Lord and Savior! Bless each student with
@@ -644,7 +780,7 @@
               <p>John 1:12 But to all who did receive him, who believed in his
                 name, he gave the right to become children of God.</p>
             </div>
-            <div>
+            <div data-aos="fade-up">
               <h3 class="font-black">Friendship with God</h3>
               <p>Abba Father, may every student and volunteer hear Your voice
                 for themselves and be drawn into a supernatural, everyday, and
@@ -659,7 +795,7 @@
                 friends, for all that I have heard from my Father I have made
                 known to you.</p>
             </div>
-            <div>
+            <div data-aos="fade-up">
               <h3 class="font-black">Relationships</h3>
               <p>Abba Father, may every student walk away from Gauntlet with a
                 set of lifelong friends. Let true brotherhood and sisterhood
@@ -669,7 +805,7 @@
                 as I have loved you. Greater love has no one than this, that
                 someone lay down his life for his friends.</p>
             </div>
-            <div>
+            <div data-aos="fade-up">
               <h3 class="font-black">Fun</h3>
               <p>Abba Father, may every student have the best week of their
                 lives at Gauntlet! Let the joy of the Holy Spirit flood the
@@ -678,7 +814,7 @@
                 presence there is fullness of joy; at your right hand are
                 pleasures forevermore.</p>
             </div>
-            <div>
+            <div data-aos="fade-up">
               <h3 class="font-black">Safety</h3>
               <p>Abba Father, surround every student and volunteer with your
                 continual protection and peace - physically, emotionally and
