working on icon grid

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -409,77 +409,78 @@
         <div class="page-constrained mx-auto bring-forward">
 
 
-          <div class="d-grid grid-cols-2 grid-cols-md-4 gap-4">
-            <div class="d-grid gap-4">
+          <div class="d-grid grid-cols-2 grid-cols-md-4 gap-0">
+
+            <div class="d-grid gap-0">
               <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-green">
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden bg-green">
                 <img class="h-auto max-w-full"
                   src="/Themes/new/Assets/SVG/gauntlet/gs/g-1-pink.svg" alt="">
               </div>
               <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-yellow">
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden">
                 <img class="h-auto max-w-full"
-                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-2-blue.svg" alt="">
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/u.svg" alt="">
               </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-blue">
-                <img class="h-auto max-w-full"
-                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-3-amber.svg" alt="">
-              </div>
-            </div>
-            <div class="d-grid gap-4">
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-purple">
-                <img class="h-auto max-w-full"
-                  src="/Themes/new/Assets/SVG/gauntlet/gs/u-orange.svg" alt="">
-              </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-fuscia">
-                <img class="h-auto max-w-full"
-                  src="/Themes/new/Assets/SVG/gauntlet/gs/belong-blue.svg"
-                  alt="">
-              </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-red">
-                <img class="h-auto max-w-full"
-                  src="/Themes/new/Assets/SVG/gauntlet/gs/here-yellow.svg"
-                  alt="">
-              </div>
-            </div>
-            <div class="d-grid gap-4">
-              <div
-                class="d-flex justify-content-center align-items-center overflow-hidden bg-blue background-center background-cover"
-                style="background-image: url('https://images.unsplash.com/photo-1517256673644-36ad11246d21?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-              </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-fuscia">
-                <img class="h-auto max-w-full"
-                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"
-                  alt="">
-              </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-lime">
-                <img class="h-auto max-w-full"
-                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg"
-                  alt="">
-              </div>
-            </div>
-            <div class="d-grid gap-4">
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-orange">
-                <img class="h-auto max-w-full"
-                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg"
-                  alt="">
-              </div>
-              <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-pink background-center background-cover"
-                style="background-image: url('https://images.unsplash.com/photo-1484712401471-05c7215830eb?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
 
+              <div
+                class="p-6 p-sm-4 p-lg-7 hidden-xs hidden-sm d-md-flex justify-content-center align-items-center overflow-hidden bg-pink">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-3.svg" alt="">
+              </div>
+            </div>
+
+            <div class="d-grid gap-0">
+              <div
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden bg-yellow">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-4.svg" alt="">
               </div>
               <div
-                class="p-7 d-flex justify-content-center align-items-center overflow-hidden bg-red">
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden">
                 <img class="h-auto max-w-full"
-                  src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/belong.svg" alt="">
+              </div>
+              <div
+                class="p-6 p-sm-4 p-lg-7 hidden-xs hidden-sm d-md-flex justify-content-center align-items-center overflow-hidden bg-red">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-6.svg" alt="">
+              </div>
+            </div>
+
+            <div class="d-grid gap-0">
+              <div
+                class="p-6 p-sm-4 p-lg-7 hidden-xs hidden-sm d-md-flex justify-content-center align-items-center overflow-hidden bg-orange">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-2.svg" alt="">
+              </div>
+              <div
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/here.svg" alt="">
+              </div>
+              <div
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden bg-purple">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-5.svg" alt="">
+              </div>
+            </div>
+
+            <div class="d-grid gap-0">
+              <div
+                class="p-6 p-sm-4 p-lg-7 hidden-xs hidden-sm d-md-flex justify-content-center align-items-center overflow-hidden bg-amber">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-3-pink.svg" alt="">
+              </div>
+              <div
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/24.svg" alt="">
+              </div>
+              <div
+                class="p-6 p-sm-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden bg-teal">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-1-yellow.svg"
                   alt="">
               </div>
             </div>
